# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2009 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.1052 2009/10/12 11:30:19 mb Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (AGPL). If you
# did not receive this file, see http://www.gnu.org/licenses/agpl.txt.
# --

2.5.0 beta1 (????/??/??)
 - (2009/10/12) TTL in Kernel::System::Cache::Set required but not checked.
 - (2009/10/12) Removed check on AttachmentDelete1 in function in
    AgentTicketMove.dtl.
 - (2009/10/12) AgentTicketOverviewPreview.dtl: superfluous hidden parameter
    'QueueID'.
 - (2009/10/07) Added global Search-Condition-Feature (AND/OR/()/!/+) for
    TicketNumber, From, To, Cc, Subject and Body also to generic agent.
 - (2009/10/05) Fixed bug#939 - "Salutation" should be renamed to "Title" for
    users and customer users.
    Notice: Use scripts/DBUpdate-to-2.5.*.sql for upgrading!
 - (2009/10/02) Fixed bug#4379 - Array parameters not working in mkStats.pl
 - (2009/09/23) Added virtual file system object for global file storage as
    Kernel::System::VirtualFS with FS and DB backends.
    Notice: Use scripts/DBUpdate-to-2.5.*.sql for upgrading!
 - (2009/09/22) Fixed bug#1774 - Updated documentation in AdminQueue.dtl.
 - (2009/09/22) Fixed bug#4100 - ArticleFreeText Default Value not working.
 - (2009/09/22) Fixed bug#1027 - Ticket csv export in customer interface incomplete.
 - (2009/09/21) Fixed bug#4218 - No error message when sending mail through not
    installed sendmail.
 - (2009/09/21) Fixed bug#4312 - MOTD module for Agent Dashboard, thanks to
    Alexander Scholler!
 - (2009/09/21) Fixed bug#3978 - Better description for PGP passphrases.
 - (2009/09/16) Fixed bug#3932 - Translation enhancements for AdminSession.dtl.
 - (2009/09/16) Fixed bug#2786 - Wrong text labels
    AdminSystemAddressForm.dtl.
 - (2009/09/16) Fixed bug#4288 - Use of uninitialized value in
    AdminGenericAgent.pm.